# recvmsg

./: .gitignore  Cargo.toml  README.md  README.tpl
src/: async.rs  empty.rs  lib.rs  msgbuf.rs  sync.rs
src/async/: ext.rs  futures.rs  fwd.rs  via.rs
src/async/impl/net/: tests.rs
src/async/impl/net/common/: tokio.rs
src/async/impl/net/unix/: tokio.rs
src/async/impl/net/windows/: tokio.rs
src/msgbuf/: cap.rs  conv.rs  ctor.rs  cursors.rs  impl_debug.rs  lifetime.rs  owned.rs  safe_write.rs  slicing.rs  take.rs  tests.rs
src/msgbuf/owned/: grow_fn.rs  impl.rs  trait_object.rs
src/os/: unix.rs
src/sync/: ext.rs  fwd.rs  via.rs
src/sync/impl/net/: tests.rs  unix.rs  windows.rs
src/sync/impl/net/unix/: extract_address.rs  impl.rs  wrap.rs
src/sync/impl/net/windows/: impl.rs
src/sync/impl/udp/: unix.rs
