[package]
name = "recvmsg"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
license = "0BSD"

[features]
default = []
std = []
std_net = ["std", "libc", "windows-sys"]

[dependencies]
tokio = { version = "1.34.0", optional = true, features = ["net"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "net", "macros"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.150", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Networking_WinSock",
], optional = true }
