[package]
name = "recvmsg"
version = "1.0.0"
edition = "2021"
rust-version = "1.60.0"
license = "0BSD"
description = "Traits for receiving datagrams reliably, without truncation."

[features]
default = []
std = []
std_net = ["std", "libc", "windows-sys"]
tokio = ["dep:tokio", "std_net"]

[dependencies]
tokio = { version = "1.34.0", optional = true, features = ["net"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "net", "macros"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.150", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Networking_WinSock",
], optional = true }

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-freebsd",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
]
all-features = true
